[project]
name = "milky-edge-flow-tools"
version = "0.2.0" # x-release-please-version
description = "Blender extension: relax crossing edge flows by resampling selected edge loops"
# Locked to the Python bundled with Blender 5.0 (the bpy wheel requires it).
requires-python = "==3.11.*"

[dependency-groups]
dev = [
  "poethepoet>=0.30",
  "bpy==5.0.1",
]

[tool.uv]
package = false

# Only needed for the optional real-application test (test-blender-app).
[tool.poe.env]
BLENDER.default = "C:/Program Files/Blender Foundation/Blender 5.0/blender.exe"

[tool.poe.tasks.test-core]
help = "Run pure-logic unit tests"
cmd = "python test_core.py"

[tool.poe.tasks.test-blender]
help = "Run the integration test against the official bpy wheel"
cmd = "python test_blender.py"

[tool.poe.tasks.test]
help = "Run all tests"
sequence = ["test-core", "test-blender"]

[tool.poe.tasks.test-blender-app]
help = "Run the integration test inside a real Blender (optional; set BLENDER)"
cmd = '"${BLENDER}" --background --factory-startup --python-exit-code 1 --python test_blender.py'

[tool.poe.tasks.validate]
help = "Validate the extension manifest"
cmd = "python tools/blender_ext.py validate ."

[tool.poe.tasks.build]
help = "Build the extension zip into dist/"
sequence = [
  { script = "os:makedirs('dist', exist_ok=True)" },
  { cmd = "python tools/blender_ext.py build --source-dir . --output-dir dist" },
]
